# snapandsay

./: .gitignore  .gitmodules  GEMINI.md  analyze_production_logs.py  extract_audit.py  logs.1771498073981.json  logs.1771605223172.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  railway.toml
.agent/workflows/: bmad-agent-_custom-stuff-dsr-writer.md  commit.md  (+1 more)
_bmad-output/: bmm-workflow-status.yaml  project-context.md
backend/: .env.example  .env.test  .gitignore  apply_migration_test.py  benchmark_results_20260129_143004.json  benchmark_results_20260129_143103.json  check_enum.py  debug_cleaner.py  debug_schema.py  fix_db_enum.py  fix_db_title.py  fix_enum.py  logs.1772123940098.json  print_db.py  pyproject.toml  reproduce_issue.py  reproduce_llm.py  requirements.txt  start.sh  test.db  verify_persistence.py  watcher.py
backend/app/: config.py  database.py  email.py  main.py  models.py  schemas.py
backend/app/agent/: ampm_graph.py  ampm_nodes.py  constants.py  graph.py  nodes.py  routing.py  state.py
backend/app/agent/data/: food_class_registry.yaml
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: admin.py  analysis.py  logs.py  stream.py
backend/app/benchmarking/: README.md  cli.py  experiment_log.py  metrics.py  nutrition5k_loader.py  oracle_runner.py  prompt_optimizer.py  prompts.py  question_parser.py  schemas.py  stratification.py  tech-spec.md
backend/app/benchmarking/prompts/: v0_baseline.yaml  v1_methodology.yaml  v2_caloric_density.yaml  v3_optimized.yaml  v4_gemini3_optimized.yaml
backend/app/core/: security.py  supabase.py
backend/app/models/: __init__.py  log.py  research.py  user.py
backend/app/schemas/: analysis.py  log.py  sse.py  stream.py
backend/app/services/: complexity_calculator.py  export_service.py  food_class_registry.py  llm_service.py  log_service.py  schema_helper.py  semantic_gatekeeper.py  streaming_service.py  voice_service.py
backend/app/tests/services/: test_voice_service.py
backend/benchmark_output/: benchmark_checkpoint.json  benchmark_report_20260129_151137.json  benchmark_report_20260129_152632.json  benchmark_report_20260129_152845.json  benchmark_summary_20260129_151137.json  benchmark_summary_20260129_152632.json  benchmark_summary_20260129_152845.json
backend/benchmark_output/experiments/: experiment_1f6aff0d.json  experiment_history.json
backend/scripts/: check_roles.py  init_test_db.py  migrate_enum.py  reproduce_db_error.py  reproduce_rls_flow.py  verify_auth_uid.py
backend/tests/: conftest.py  repro_loop.py  test_auth.py  test_cleanup.py  test_database.py  test_email.py  test_task2.py
backend/tests/agent/: test_ampm_graph.py  test_ampm_nodes.py  test_complexity_integration.py  test_graph.py  test_nodes.py  test_routing.py  test_semantic_routing.py  test_validation.py
backend/tests/api/: test_admin.py  test_admin_auth.py  test_admin_export.py  test_stream.py  test_stream_error.py
backend/tests/api/v1/: test_analysis.py  test_health.py  test_logs.py
backend/tests/benchmarking/: conftest.py  test_complexity_benchmarking.py  test_loader.py  test_metrics.py  test_question_parser.py  test_runner.py  test_stratification.py
backend/tests/commands/: test_generate_openapi_schema.py
backend/tests/core/: test_config_additions.py
backend/tests/schemas/: conftest.py  test_sse.py
backend/tests/services/: test_admin_log_service.py  test_admin_log_service_extra.py  test_ambiguity_analysis.py  test_complexity_calculator.py  test_export_service.py  test_food_class_registry.py  test_google_llm.py  test_llm_service.py  test_llm_service_targeting.py  test_semantic_gatekeeper.py  test_streaming_service.py  test_voice_service.py
backend/tests/utils/: test_utils.py
docs/: LOCAL_DEV_SETUP.md  architecture.md  benchmarking.md  bmm-workflow-status.yaml  ci-secrets-checklist.md  ci.md  code-review-1-3.md  code_review_findings.md  epics.md  implementation-readiness-report-2025-12-04.md  index.md  paper.md  project_context.md  prompt-engineering-iterations.md  test-design-system.md  test-plan-epic-1.md  test-plan-epic-2.md  test-review.md  ux-design-specification.md  validation-report-2025-12-04-1807.md  validation-report-story-1-1.md
frontend/: eslint.config.mjs  jest.config.ts  jest.setup.ts  middleware.ts  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  test_output.txt  test_output_2.txt  test_output_3.txt  test_output_4.txt  test_output_5.txt  test_output_6.txt
playwright-report/: index.html
scripts/: burn-in.sh  ci-local.sh  create_test_user.py  download_nutrition5k.py  get_token.py  validate_db.py  verify_i18n.py  verify_research_logs.py
supabase/: .gitignore  config.toml
test-results/: junit.xml
tests/: README.md
(+229 files in other folders)
