[project]
name = "app"
version = "0.0.6"
description = ""
authors = [{ name = "Anderson Resende", email = "anderson@vinta.com.br" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
dependencies = [
    "fastapi[standard]>=0.115.0,<0.116",
    "asyncpg>=0.29.0,<0.30",
    "pydantic-settings>=2.5.2,<3",
    "fastapi-mail>=1.4.1,<2",
    "fastapi-pagination==0.13.3",
    "sqlalchemy>=2.0.44",
    "langgraph>=1.0.4",
    "pyjwt[crypto]>=2.10.1",
    "langchain-core",
    "openai>=1.0.0",
    "supabase>=2.25.1",
    "pandas>=2.3.3",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pre-commit>=3.4.0,<4",
    "ruff>=0.4.0,<0.5",
    "watchdog>=5.0.3,<6",
    "python-dotenv>=1.0.1,<2",
    "pytest>=8.3.3,<9",
    "pytest-mock>=3.14.0,<4",
    "mypy>=1.13.0,<2",
    "coveralls>=4.0.1,<5",
    "pytest-asyncio>=0.24.0,<0.25",
    "mkdocs-material>=9.6.9",
    "mkdocs-material[imaging]>=9.6.9",
    "aiosqlite>=0.21.0",
    "psycopg2-binary>=2.9.9",
]

[tool.uv]
package = false

[tool.hatch.build.targets.sdist]
include = ["commands"]

[tool.hatch.build.targets.wheel]
include = ["commands"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "S",   # flake8-bandit (security)
    "N",   # pep8-naming
    "UP",  # pyupgrade
]
ignore = [
    "S101",   # Use of assert (expected in pytest)
    "S603",   # subprocess without shell=True (acceptable in controlled scripts)
    "S607",   # Starting process with partial path (acceptable with system commands)
    "B008",   # Do not perform function call in argument defaults (common FastAPI pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # Allow asserts in tests
    "S105",   # Allow hardcoded passwords in test fixtures
    "S110",   # Allow try-except-pass (common in test cleanup)
    "E501",   # Allow longer lines in tests (test data can be verbose)
    "E402",   # Allow imports not at top (test setup patterns)
    "E741",   # Allow ambiguous variable names (l, O, I)
]
"*.py" = []  # Base ignores applied to all
"*_test.py" = ["S110", "E501", "E402", "E741"]
"fix_*.py" = ["E501"]  # Allow long lines in one-off fix scripts
"reproduce_*.py" = ["E501", "F401"]  # Allow long lines and unused imports in repro scripts
"verify_*.py" = ["E501", "E402", "S105"]  # Allow patterns in verification scripts
"apply_*.py" = ["E501"]  # Allow long lines in migration scripts
"watcher.py" = [
    "S603",   # Allow subprocess calls in dev watcher
    "S607",   # Allow partial paths in dev watcher
]
"app/database.py" = ["E402"]  # Dotenv must load before other imports
"app/api/v1/endpoints/logs.py" = ["S110"]  # Allow try-except-pass for cleanup
